<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titrePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titrePage"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioEntreePlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entreePlat" />

                <RadioButton
                    android:id="@+id/radioPlatDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platDessert" />

                <RadioButton
                    android:id="@+id/radioEntreePlatDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entreePlatDessert" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/prixEntreePlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prixEntreePlat" />

                <TextView
                    android:id="@+id/prixPlatDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prixPlatDessert" />

                <TextView
                    android:id="@+id/prixEntreePlatDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prixEPD" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSuppl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtSuppl"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/prixSuppl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prixSuppl"
                android:textSize="20sp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/checkApero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkApero" />

                <CheckBox
                    android:id="@+id/checkCafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkCafe" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/checkFromage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkFromage" />

                <CheckBox
                    android:id="@+id/checkBeer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkBeer" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/checkTerras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkTerras" />

                <CheckBox
                    android:id="@+id/checkPoulet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkPoulet" />
            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/buttonValide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/checkbox_on_background" />

        <TextView
            android:id="@+id/textFacture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textFacture"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contFacture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Facture" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>